--- a/style.css
+++ b/style.css
@@ -1,12 +1,55 @@
 body {
     margin: 0%;
     height: 100%;
-    background-color: rgba(177, 183, 190, 0.295);
     text-transform: uppercase;
     font-family: Tahoma, Verdana, sans-serif;
-    font-size: x-large;
-    text-shadow: 1px 2px rgb(139, 139, 137);
+    overflow: hidden;
+    
 }
+
+
+ul {
+    width: 100%;
+    height: 5vh;
+    margin: auto;
+    max-width: 700px;
+
+    display: flex;
+    justify-content: space-between;
+    
+    text-align: center;
+
+    list-style-type: none;
+
+}
+
+a {
+    text-decoration: none;
+    color: rgb(197, 196, 196);
+
+}
+
+li {
+    
+    text-transform: uppercase;
+    cursor: pointer;
+    color: rgb(197, 196, 196);
+    min-width: 80px;
+    margin: auto;
+}
+
+li:hover{
+    background-color: rgba(53, 53, 53, 0.678);
+    color: white;
+    transition-duration: 0.4s;
+    border-radius: 5px; 
+}
+
+li:active{
+    transform: translateY(4px);
+}
+
+
 
 .hero {
     width: 100vw;
@@ -14,7 +57,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+
     text-align: center;
+    font-size: x-large;
+    text-shadow: 1px 2px rgb(139, 139, 137);
 
     background-image: url(/img/hwJPG\ \(4\).jpg);
     background-size: cover;
