--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ ul {
     width: 100%;
     height: 5vh;
     margin: auto;
-    max-width: 700px;
+    max-width: 1000px;
+    font-size: x-large;
 
     display: flex;
     justify-content: space-between;
@@ -59,7 +60,7 @@ li:active{
     font-size: x-large;
     text-shadow: 1px 2px rgb(139, 139, 137);
 
-    background-image: url(/img/hwJPG\ \(4\).jpg);
+    background-image: url("./img/hwJPG\ \(4\).jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
