--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
-body {
-    margin: 0%;
-    height: 100%;
-    text-transform: uppercase;
+header {
     font-family: Tahoma, Verdana, sans-serif;
-    overflow: hidden;
 }
 
-ul {
+header ul {
     width: 100%;
     height: 5vh;
     margin: auto;
@@ -27,18 +23,17 @@ a {
     color: rgb(197, 196, 196);
 }
 
-li {
+header li {
     
     text-transform: uppercase;
     cursor: pointer;
-    color: rgb(197, 196, 196);
     min-width: 80px;
     margin: auto;
 }
 
-li:hover{
+header li a:hover{
     background-color: rgba(53, 53, 53, 0.678);
-    color: white;
+    color: #ffff;
     transition-duration: 0.4s;
     border-radius: 5px; 
 }
@@ -47,6 +42,14 @@ li:active{
     transform: translateY(4px);
 }
 
+body {
+    margin: 0%;
+    height: 100%;
+    text-transform: uppercase;
+    font-family: Tahoma, Verdana, sans-serif;
+    font-size: large;
+    overflow: hidden;
+}
 
 
 .hero {
@@ -84,7 +87,6 @@ li:active{
 
     text-transform: inherit;
     font-size: large;
-    font-family: Tahoma, verdana, sans-serif;
        
     cursor: pointer;
 
@@ -98,11 +100,3 @@ li:active{
 .hero-text button:active{
     transform: translateY(4px);
 }
-
-/* .hero .hero-button {
-    display: block;
-    width: 200px;
-    border: 3px solid white;
-    color: white;
-    margin-left: 20%;
-} */
