--- a/style.css
+++ b/style.css
@@ -4,19 +4,21 @@ body {
     text-transform: uppercase;
     font-family: Tahoma, Verdana, sans-serif;
     font-size: large;
-    overflow: hidden;
+    overflow: auto;
+    background-color: white;
 }
+
 
 .nav-bar ul {
     width: 100%;
-    height: 5vh;
+    height: 6vh;
     margin: auto;
     max-width: 1000px;
     font-size: x-large;
 
     display: flex;
     justify-content: space-between;
-    
+
     text-align: center;
 
     list-style-type: none;
@@ -29,21 +31,21 @@ body {
 }
 
 .nav-bar li {
-    
+
     text-transform: uppercase;
     cursor: pointer;
     min-width: 80px;
     margin: auto;
 }
 
-.nav-bar li a:hover{
+.nav-bar li a:hover {
     background-color: rgba(53, 53, 53, 0.678);
     color: #ffff;
     transition-duration: 0.4s;
-    border-radius: 5px; 
+    border-radius: 5px;
 }
 
-li:active{
+li:active {
     transform: translateY(4px);
 }
 
@@ -70,7 +72,7 @@ li:active{
 }
 
 
-.hero-text button {
+button {
     display: inline-block;
     padding: 10px 25px;
     margin-top: 6px;
@@ -82,16 +84,83 @@ li:active{
 
     text-transform: inherit;
     font-size: large;
-       
+
     cursor: pointer;
 
     transition-duration: 0.4s;
 }
 
-.hero-text button:hover{
+button:hover {
     background-color: rgba(53, 53, 53, 0.678);
 }
 
-.hero-text button:active{
+button:active {
     transform: translateY(4px);
+}
+
+.main-container {
+    padding: 15px;
+    background-color: #ffff;
+    text-align: center;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.wrapper {
+    background-color: rgba(235, 235, 235, 0.719);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2%;
+    align-items: center;
+    width: 60%;
+    padding-bottom: 70px;
+   
+}
+
+.form-header {
+    margin: 50px;
+    grid-row: 1;
+    grid-column: span 2;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+input:focus {
+    background-color: rgba(138, 138, 138, 0.932);
+    color: white;
+    font-size: 18px;
+}
+
+textarea:focus {
+    background-color: rgba(138, 138, 138, 0.932);
+    color: white;
+    font-size: 18px;
+}
+
+#contact-btn,
+input,
+textarea {
+    padding: 1.5em;
+}
+
+footer {
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 100px;
+    margin-top: 30px;
+    color: rgb(197, 196, 196);
+    font-size: x-large;
 }
