--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     height: 6vh;
     margin: auto;
     max-width: 1000px;
-    font-size: x-large;
+    font-size: large;
 
     display: flex;
     justify-content: space-between;
@@ -117,7 +117,7 @@ button:active {
     align-items: center;
     width: 60%;
     padding-bottom: 70px;
-   
+
 }
 
 .form-header {
@@ -156,11 +156,41 @@ textarea {
     padding: 1.5em;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10%;
+}
+
+.polariod-img {
+    width: 100%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+
+.responsive-image {
+    max-width: 100%;
+    height: auto;
+}
+
+.polariod-container {
+    display: block;
+    padding: 2% 10%;
+    font-size: 0.8em;
+}
+
+.polariod-img:hover {
+    transition: 0.4s;
+    background-color: rgba(138, 138, 138, 0.932);
+    color: white;
+}
+
 footer {
     text-align: center;
     padding: 10px;
     margin-bottom: 100px;
     margin-top: 30px;
     color: rgb(197, 196, 196);
-    font-size: x-large;
+    font-size: large;
 }
