--- a/style.css
+++ b/style.css
@@ -117,6 +117,8 @@ button:active {
     align-items: center;
     width: 60%;
     padding-bottom: 70px;
+    border-radius: 2em;
+    margin: 10%;
 
 }
 
@@ -162,6 +164,13 @@ textarea {
     gap: 10%;
 }
 
+.grid-container-project-site {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px
+}
+
 .polariod-img {
     width: 100%;
     background-color: white;
@@ -184,6 +193,36 @@ textarea {
     transition: 0.4s;
     background-color: rgba(138, 138, 138, 0.932);
     color: white;
+}
+
+.grid-container-project-site {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    background-color: rgba(235, 235, 235, 0.719);
+    border-radius: 2em;
+}
+
+.site-info {
+    padding: 5%;
+    width: 90%;
+    color: rgb(0, 0, 0);
+    text-shadow: 2px 2px rgba(255, 255, 255, 0.8);
+}
+
+.site-info p {
+    margin-top: 5em;
+    font-size: small;
+}
+
+.github-link {
+    margin-bottom: 15%;
+}
+
+#github-logo {
+    width: 50%;
+    height: 100%;
 }
 
 footer {
