--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 body {
-    margin: 0%;
-    height: 100%;
     text-transform: uppercase;
     font-family: Tahoma, Verdana, sans-serif;
     font-size: large;
@@ -106,33 +104,39 @@ button:active {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    margin-top: 5%;
+
 }
 
-.wrapper {
-    background-color: rgba(235, 235, 235, 0.719);
+.grid-container-contact-site {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 2%;
-    align-items: center;
-    width: 60%;
-    padding-bottom: 70px;
+    grid-template-areas:
+        'form-header form-header'
+        'aside form-container'
+        'button button';
+    gap: 10px;
+    width: 80%;
+    height: 100%;
+    background-color: rgba(235, 235, 235, 0.719);
     border-radius: 2em;
-    margin: 10%;
-
 }
 
-.form-header {
-    margin: 50px;
-    grid-row: 1;
-    grid-column: span 2;
+aside #wrapper-img img {
+    max-width: 100%;
+    height: auto;
 }
 
 .form-container {
-    display: flex;
-    flex-direction: column;
+    max-width: 100%;
+    height: auto;
     align-items: center;
     justify-content: center;
+}
+
+.form-header {
+    margin: 30px;
+    grid-row: 1;
+    grid-column: span 2;
 }
 
 label {
@@ -162,13 +166,6 @@ textarea {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10%;
-}
-
-.grid-container-project-site {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px
 }
 
 .polariod-img {
@@ -224,6 +221,9 @@ textarea {
     width: 50%;
     height: 100%;
 }
+#space {
+    margin-bottom: 48%;
+}
 
 footer {
     text-align: center;
@@ -232,4 +232,12 @@ footer {
     margin-top: 30px;
     color: rgb(197, 196, 196);
     font-size: large;
+}
+
+@media screen and (max-width: 576px) {
+
+}
+
+@media screen and (max-width: 768px) {
+    
 }
