--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ button:active {
         'aside form-container'
         'button button';
     gap: 10px;
-    width: 80%;
+    width: 45%;
     height: 100%;
     background-color: rgba(235, 235, 235, 0.719);
     border-radius: 2em;
@@ -250,22 +250,61 @@ footer {
 }
 
 @media screen and (max-width: 576px) {
-    .hero-text {
+    body {
         font-size: small;
     }
-}
 
-@media screen and (max-width: 768px) {
-    .hero-text {
-        font-size: medium;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    .hero-text {
-        font-size: large;
+    .nav-bar ul {
+        flex-direction: column;
     }
 
+    .nav-bar li {
+        margin: 5px;
+    }
+
+    .main-container {
+        padding: 15px;
+        background-color: #ffff;
+        text-align: center;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 25%;
+
+    }
+
+    .right-column {
+        display: none;
+    }
+
+    .index-container {
+        background-color: rgba(235, 235, 235, 0.719);
+        padding: 5%;
+        border-radius: 2em;
+        width: 60%;
+        height: 100%;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+        max-width: 80%;
+        margin: 0 auto;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+
 }
 
 
+@media screen and (max-width: 768px) {}
+
+@media screen and (max-width: 992px) {}
